Added a hover to the Crossword Puzzle squares

--- a/squares.html
+++ b/squares.html
@@ -12,6 +12,8 @@
     <title>None</title>
   </head>
   <body>
+
+
       <script src= "svg.js"></script>
       <script src='main.js'></script>
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -57,54 +59,80 @@
 
 
         <div class ='grid'>
-        
-        <div class="_h_tml square">1</div>
-        <div class="h_t_ml square"></div>
-        <div class="ht_m_l square"></div>
-        <div class="htm_l_ square"></div>
-        <div class="m_a_in-jss square"></div>
-        <div class="ma_i_n-jss square"></div>
-        <div class="mai_n_-jss square"></div>
-        <div class="main_-_jss square"></div>
-        <div class="main-_j_ss square"></div>
-        <div class="main-j_s_s square"></div>
-        <div class="main-js_s_ square"></div>
-        <div class="n_a_v square"></div>
-        <div class="na_v_ square"></div>
-        <div class="_c_ss square"></div>
-        <div class="cs_s_ square"></div>
-        <div class="s_t_yle square"></div>
-        <div class="st_y_le square"></div>
-        <div class="sty_l_e square"></div>
-        <div class="styl_e_ square"></div>
-        <div class="j_a_vascript square"></div>
-        <div class="ja_v_ascript square"></div>
-        <div class="jav_a_script square"></div>
-        <div class="java_s_cript square"></div>
-        <div class="javas_c_ript square"></div>
-        <div class="javasc_r_ipt square"></div>
-        <div class="javascr_i_pt square"></div>
-        <div class="javascri_p_t square"></div>
-        <div class="javascrip_t_ square"></div>
-        <div class="i_n_dex square"></div>
-        <div class="in_d_ex square"></div>
-        <div class="ind_e_x square"></div>
-        <div class="inde_x_ square"></div>
-        <div class="p_r_ogramming square"></div>
-        <div class="pr_o_gramming square"></div>
-        <div class="pro_g_ramming square"></div>
-        <div class="prog_r_amming square"></div>
-        <div class="progr_a_mming square"></div>
-        <div class="progra_m_ming square"></div>
-        <div class="program_m_ing square"></div>
-        <div class="programm_i_ng square"></div>
-        <div class="programmi_n_g square"></div>
-        <div class="programmin_g_ square"></div>
-        <div class="c_o_ding square"></div>
-        <div class="co_d_ing square"></div>
-        <div class="cod_i_ng square"></div>
-        <div class="codi_n_g square"></div>
-        <div class="codin_g_ square"></div>
+        <!--These are the Boxes-->
+        <div class="_h_tml square" onmouseover="changeText('HTML Hint')" onmouseout="defaultText()">1</div>
+
+        <div class="h_t_ml square" onmouseover="changeText('HTML Hint')" onmouseout="defaultText()"></div>
+        <!--This is Start of the words "Main.jss" and part of "HTML"-->
+        <div class="ht_m_l square" onmouseover="changeText('HTML Hint and main.jss Hint')" onmouseout="defaultText()"></div>
+        <!--Word = "Html"-->
+        <div class="htm_l_ square" onmouseover="changeText('HTML Hint')" onmouseout="defaultText()"></div>
+        <!--Word = "Main.jss"-->
+        <div class="m_a_in-jss square" onmouseover="changeText('Main.jss Hint')" onmouseout="defaultText()"></div>
+        <div class="ma_i_n-jss square" onmouseover="changeText('Main.jss Hint')" onmouseout="defaultText()"></div>
+        <!--Start of Word "Nav" and part of "Main.jss"-->
+        <div class="mai_n_-jss square" onmouseover="changeText('Main.jss Hint and Nav Hint')" onmouseout="defaultText()"></div>
+        <!--This is the "." of "Main.jss"-->
+        <div class="main_-_jss square" onmouseover="changeText('Main.jss Hint')" onmouseout="defaultText()"></div>
+        <!--This is the start of "Javascript" and part of "Main.jss" -->
+        <div class="main-_j_ss square" onmouseover="changeText('Main.jss and JavaScript Hint')" onmouseout="defaultText()"></div>
+        <!--Word="Main.jss"-->
+        <div class="main-j_s_s square" onmouseover="changeText('Main.jss Hint')" onmouseout="defaultText()"></div>
+        <!--This is part of words "css" and "Main.jss"-->
+        <div class="main-js_s_ square" onmouseover="changeText('Css and Main.jss Hint')" onmouseout="defaultText()"></div>
+        <!--Word= "Nav"-->
+        <div class="n_a_v square" onmouseover="changeText('Nav Hint')" onmouseout="defaultText()"></div>
+        <div class="na_v_ square" onmouseover="changeText('Nav Hint')" onmouseout="defaultText()"></div>
+        <!--This is the start of both words 'css' and 'coding'-->
+        <div class="_c_ss square" onmouseover="changeText('Css and coding Hint')" onmouseout="defaultText()"></div>
+        <!--This is part of "css" and start of word 'style'-->
+        <div class="cs_s_ square" onmouseover="changeText('Css hint and Style Hint')" onmouseout="defaultText()"></div>
+        <!--Word = 'style'-->
+        <div class="s_t_yle square" onmouseover="changeText('Style Hint')" onmouseout="defaultText()"></div>
+        <div class="st_y_le square" onmouseover="changeText('Style Hint')" onmouseout="defaultText()"></div>
+        <div class="sty_l_e square" onmouseover="changeText('Style Hint')" onmouseout="defaultText()"></div>
+        <div class="styl_e_ square" onmouseover="changeText('Style Hint')" onmouseout="defaultText()"></div>
+        <!--Word= 'Javascript'-->
+        <div class="j_a_vascript square" onmouseover="changeText('Javascript Hint')" onmouseout="defaultText()"></div>
+        <div class="ja_v_ascript square" onmouseover="changeText('Javascript Hint')" onmouseout="defaultText()"></div>
+        <div class="jav_a_script square" onmouseover="changeText('Javascript Hint')" onmouseout="defaultText()"></div>
+        <div class="java_s_cript square" onmouseover="changeText('Javascript Hint')" onmouseout="defaultText()"></div>
+        <div class="javas_c_ript square" onmouseover="changeText('Javascript Hint')" onmouseout="defaultText()"></div>
+        <div class="javasc_r_ipt square" onmouseover="changeText('Javascript Hint')" onmouseout="defaultText()"></div>
+        <!--This is part of word 'Javascript' and Start of word 'Index'-->
+        <div class="javascr_i_pt square" onmouseover="changeText('Index and Javascript Hint')" onmouseout="defaultText()"></div>
+        <!--This is start of word 'Programming' and part of word 'Javascript'-->
+        <div class="javascri_p_t square" onmouseover="changeText('Programming and Javascript Hint')" onmouseout="defaultText()"></div>
+        <!--Word= 'Javascript'-->
+        <div class="javascrip_t_ square" onmouseover="changeText('Javascript Hint')" onmouseout="defaultText()"></div>
+        <!--Word= "Index"-->
+        <div class="i_n_dex square" onmouseover="changeText('Index Hint')" onmouseout="defaultText()"></div>
+        <div class="in_d_ex square" onmouseover="changeText('Index Hint')" onmouseout="defaultText()"></div>
+        <div class="ind_e_x square" onmouseover="changeText('Index Hint')" onmouseout="defaultText()"></div>
+        <div class="inde_x_ square" onmouseover="changeText('Index Hint')" onmouseout="defaultText()"></div>
+        <!--Word= "Programming"-->
+        <div class="p_r_ogramming square" onmouseover="changeText('Programming Hint')" onmouseout="defaultText()"></div>
+        <div class="pr_o_gramming square" onmouseover="changeText('Programming Hint')" onmouseout="defaultText()"></div>
+        <div class="pro_g_ramming square" onmouseover="changeText('Programming Hint')" onmouseout="defaultText()"></div>
+        <div class="prog_r_amming square" onmouseover="changeText('Programming Hint')" onmouseout="defaultText()"></div>
+        <div class="progr_a_mming square" onmouseover="changeText('Programming Hint')" onmouseout="defaultText()"></div>
+        <div class="progra_m_ming square" onmouseover="changeText('Programming Hint')" onmouseout="defaultText()"></div>
+        <div class="program_m_ing square" onmouseover="changeText('Programming Hint')" onmouseout="defaultText()"></div>
+        <div class="programm_i_ng square" onmouseover="changeText('Programming Hint')" onmouseout="defaultText()"></div>
+        <div class="programmi_n_g square" onmouseover="changeText('Programming Hint')" onmouseout="defaultText()"></div>
+        <div class="programmin_g_ square" onmouseover="changeText('Programming Hint')" onmouseout="defaultText()"></div>
+        <!--Word= 'Coding'-->
+        <div class="c_o_ding square" onmouseover="changeText('Coding Hint')" onmouseout="defaultText()"></div>
+        <div class="co_d_ing square" onmouseover="changeText('Coding Hint')" onmouseout="defaultText()"></div>
+        <div class="cod_i_ng square" onmouseover="changeText('Coding Hint')" onmouseout="defaultText()"></div>
+        <div class="codi_n_g square" onmouseover="changeText('Coding Hint')" onmouseout="defaultText()"></div>
+        <div class="codin_g_ square" onmouseover="changeText('Coding Hint')" onmouseout="defaultText()"></div>
+        <!--The Defult Hint-->
+        <div id="text-display">
+  
+            :Your Hint Here:
+               
+         </div>
         </div>
 
     <!-- Optional JavaScript -->
