--- a/Trivia10.html
+++ b/Trivia10.html
@@ -51,8 +51,8 @@
     <script src='main.js'></script>
     <h1 id ='trivia'align="center">What is Pops?</h1>
     <!-- add image/gif -->
-    <div class="">
-    <img src="" 
+    <div class="x">
+    <img src="https://giffiles.alphacoders.com/295/29524.gif" 
     alt="">
 </div>
     <!-- Optional JavaScript -->
@@ -64,10 +64,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <div class="v">
-<a href=""><button>A human with a big head</button></a>
+<a href="Triviawrong9.html"><button>A human with a big head</button></a>
 <a href="Trivia11.html"><button>Lollipop man</button></a>
-<a href=""><button>An alien</button></a>
-<a href=""><button>A regular person</button></a>
+<a href="Triviawrong9.html"><button>An alien</button></a>
+<a href="Triviawrong9.html"><button>A regular person</button></a>
 </div>
   </body>
 </html>
