--- a/TriviaEnd.html
+++ b/TriviaEnd.html
@@ -52,7 +52,7 @@
     <h1 id ='trivia'align="center">YOU MADE IT TO THE END!</h1>
     <!-- add image/gif -->
     <div class="v">
-    <img src="" 
+    <img src="https://media.giphy.com/media/140yK9FuRCvVOU/giphy.gif" 
     alt="">
 </div>
     <!-- Optional JavaScript -->
