--- a/Triviawrong5.html
+++ b/Triviawrong5.html
@@ -52,7 +52,7 @@
     <h1 id ='trivia'align="center">WRONG ANSWER</h1>
 <!-- image -->
 <div class="x">
-  <img src="https://media1.tenor.com/images/ef8eb50eb7d346fd00de5376285e2151/tenor.gif?itemid=4563878" alt="">
+  <img src="https://media2.giphy.com/media/vX0BIykwR863u/source.gif" alt="">
 </div>
 
     <!-- Optional JavaScript -->
