--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="Trivia1.html">Trivia <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="CrossWord.html">Crossword <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">[Blank]</a>
