--- a/second trivia5.html
+++ b/second trivia5.html
@@ -64,9 +64,9 @@ alt="">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
 <div class="x">
-<a href=""><button>They diy iy red</button></a>
+<a href=""><button>They dye it red</button></a>
 <a href=""><button>its naturally red just a rare color</button></a>
-<a href="second trivia6.html"><button>pour in there hate and anger to make the krystal to bleed red</button></a>
+<a href="second trivia6.html"><button>pour in their hate and anger to make the krystal to bleed red</button></a>
 <a href=""><button>they do a ritual</button></a>
 </div>
 </body>
