--- a/second trivia6.html
+++ b/second trivia6.html
@@ -49,11 +49,11 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">Why did Darth Maul use a double bladed Lightsaber?</h1>
+<h1 id ='trivia'align="center">How many forms of lightsaber fighting was there?</h1>
 <!-- add image/gif -->
 <div class="v">
-<img src="https://media.giphy.com/media/GFxXy4kf0wq64/giphy.gif" /> 
-<!-- alt="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwjzuZDF2K3jAhXTMX0KHbhnDRkQjRx6BAgBEAU&url=https%3A%2F%2Fwww.cbr.com%2Freasons-darth-maul-biggest-badass-sith%2F&psig=AOvVaw0AmoHlzRsoklykUWPq_y_r&ust=1562962690475989"> -->
+<img src="https://thumbs.gfycat.com/OddballFlakyFieldmouse-size_restricted.gif" 
+alt="">
 </div>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -64,10 +64,10 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
 <div class="v">
-<a href=""><button>He thought it would be intimidating and scare the opponent to make mistakes during battle</button></a>
-<a href="second trivia10"><button>it gave him more choices during combat</button></a>
-<a href=""><button>he thought it looked cool</button></a>
-<a href=""><button>he was given it as a trophie/prize</button></a>
+<a href="second trivia8.html"><button>"7"</button></a>
+<a href=""><button>"8!"</button></a>
+<a href=""><button>"1"</button></a>
+<a href=""><button>"5"</button></a>
 </div>
 </body>
 </html>
