--- a/second trivia7.html
+++ b/second trivia7.html
@@ -49,10 +49,10 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">How many forms of lightsaber fighting was there?</h1>
+<h1 id ='trivia'align="center">Who ordered the creation of the clone army?</h1>
 <!-- add image/gif -->
 <div class="v">
-<img src="https://thumbs.gfycat.com/OddballFlakyFieldmouse-size_restricted.gif" 
+<img src="https://pa1.narvii.com/6623/3b815ec0492b6d3409e54289243dc14ba3dce302_hq.gif" 
 alt="">
 </div>
 <!-- Optional JavaScript -->
@@ -64,10 +64,10 @@ alt="">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
 <div class="v">
-<a href="second trivia8.html"><button>"7"</button></a>
-<a href=""><button>"8!"</button></a>
-<a href=""><button>"1"</button></a>
-<a href=""><button>"5"</button></a>
+<a href=""><button>"Darth Sidious"</button></a>
+<a href=""><button>"Count Dooku"</button></a>
+<a href="second trivia9"><button>"Jedi Master Sifo Dyas"</button></a>
+<a href=""><button>"Darth Plagues"</button></a>
 </div>
 </body>
 </html>
