--- a/TriviaEnd.html
+++ b/TriviaEnd.html
@@ -7,18 +7,18 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="Trivia1.html">Trivia <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="CrossWord.html">Crossword <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">[Blank]</a>
+              <a class="nav-link" href="WordSearch.html">WordSearch</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Puzzles
+                Trivia
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="CrossWord.html">Crossword</a>
-                <a class="dropdown-item" href="WordSearch.html">WordSearch</a>
+                <a class="dropdown-item" href="Trivia1.html">Regular show</a>
+                <a class="dropdown-item" href="">Star wars</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="Description.html">Descripton</a>
               </div>
@@ -33,6 +33,7 @@
           </form>
         </div>
       </nav>
+      
 
       <!doctype html>
 <html lang="en">
