--- a/second trivia1.html
+++ b/second trivia1.html
@@ -53,7 +53,7 @@
 
 <!-- add image/gif -->
 <div class="v">
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/Star_Wars_Logo.svg/1280px-Star_Wars_Logo.svg.png" 
+<img src="https://ixxidesign.azureedge.net/media/1068043/26-Star-Wars-logo-black-5x6.jpg?width=562" 
 alt="">
 </div>
 <!-- Optional JavaScript -->
