--- a/CrossWord.html
+++ b/CrossWord.html
@@ -31,7 +31,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="Trivia1.html">Regular show</a>
-              <a class="dropdown-item" href="">Star wars</a>
+              <a class="dropdown-item" href="second trivia1.html">Star wars</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="Description.html">Descripton</a>
             </div>
