--- a/second trivia7.html
+++ b/second trivia7.html
@@ -66,7 +66,7 @@ alt="">
 <div class="v">
 <a href=""><button>"Darth Sidious"</button></a>
 <a href=""><button>"Count Dooku"</button></a>
-<a href="second trivia8"><button>"Jedi Master Sifo Dyas"</button></a>
+<a href="second trivia8.html"><button>"Jedi Master Sifo Dyas"</button></a>
 <a href=""><button>"Darth Plagues"</button></a>
 </div>
 </body>
