--- a/second trivia8.html
+++ b/second trivia8.html
@@ -65,7 +65,7 @@
 </script>
 <div class="v">
 <a href=""><button>He thought it would be intimidating and scare the opponent to make mistakes during battle</button></a>
-<a href="second trivia9"><button>it gave him more choices during combat</button></a>
+<a href="second trivia9.html"><button>it gave him more choices during combat</button></a>
 <a href=""><button>he thought it looked cool</button></a>
 <a href=""><button>he was given it as a trophie/prize</button></a>
 </div>
