Messed with some stuff

--- a/Solutions.html
+++ b/Solutions.html
@@ -56,19 +56,19 @@
         
         <div class="_h_tmls squares">H</div>
         <div class="h_t_ml squares">T</div>
-        <div class="ht_m_l squares">M</div>
+        <div class="ht_m_ls squares">M</div>
         <div class="htm_l_ squares">L</div>
         <div class="m_a_in-jss squares">A</div>
         <div class="ma_i_n-jss squares">I</div>
-        <div class="mai_n_-jss squares">N</div>
+        <div class="mai_n_-jsss squares">N</div>
         <div class="main_-_jss squares">.</div>
-        <div class="main-_j_ss squares">J</div>
+        <div class="main-_j_sss squares">J</div>
         <div class="main-j_s_s squares">S</div>
         <div class="main-js_s_ squares">S</div>
         <div class="n_a_v squares">A</div>
         <div class="na_v_ squares">V</div>
         <div class="_c_ss squares">C</div>
-        <div class="cs_s_ squares">S</div>
+        <div class="cs_s_s squares">S</div>
         <div class="s_t_yle squares">T</div>
         <div class="st_y_le squares">Y</div>
         <div class="sty_l_e squares">L</div>
@@ -79,8 +79,8 @@
         <div class="java_s_cript squares">S</div>
         <div class="javas_c_ript squares">C</div>
         <div class="javasc_r_ipt squares">R</div>
-        <div class="javascr_i_pt squares">I</div>
-        <div class="javascri_p_t squares">P</div>
+        <div class="javascr_i_pts squares">I</div>
+        <div class="javascri_p_ts squares">P</div>
         <div class="javascrip_t_ squares">T</div>
         <div class="i_n_dex squares">N</div>
         <div class="in_d_ex squares">D</div>
