--- a/second trivia9 copy.html
+++ b/second trivia9 copy.html
@@ -17,7 +17,7 @@
             Trivia
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="Trivia1.html">Regular show</a>
+            <a class="dropdown-item" href="second trivia1.html">Regular show</a>
             <a class="dropdown-item" href="">Star wars</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="Description.html">Descripton</a>
@@ -50,10 +50,10 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">how did Han Solo get the Falcon?</h1>
+<h1 id ='trivia'align="center">what planet did maul did on?</h1>
 <!-- add image/gif -->
 <div class="x">
-<img src="https://ewscripps.brightspotcdn.com/dims4/default/a782f54/2147483647/strip/true/crop/640x360+0+60/resize/1280x720!/quality/90/?url=https%3A%2F%2Fmediaassets.wcpo.com%2Fphoto%2F2018%2F04%2F23%2FWCPO_falcon_1524528489522_84735425_ver1.0_640_480.jpg" 
+<img src="https://media.vanityfair.com/photos/5b06d4680a43323fcc0139c9/master/w_1600%2Cc_limit/darth-maul-dies.gif" 
 alt="">
 </div>
 <!-- Optional JavaScript -->
@@ -65,10 +65,10 @@ alt="">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
 <div class="v">
-<a href="Triviawrong9.html"><button>Stole it</button></a>
-<a href="Second trivia11.html"><button>Won it</button></a>
-<a href="Triviawrong9.html"><button>Bought it</button></a>
-<a href="Triviawrong9.html"><button>Borrowed it and never gave it back</button></a>
+<a href="Triviawrong9.html"><button>Naboo</button></a>
+<a href="Second trivia11.html"><button>Tatooine</button></a>
+<a href="Triviawrong9.html"><button>Coruscant</button></a>
+<a href="Triviawrong9.html"><button>Endor</button></a>
 </div>
 </body>
 </html>
