--- a/second trivia wrong.html
+++ b/second trivia wrong.html
@@ -17,8 +17,8 @@
             Trivia
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="second trivia1.html">Regular show</a>
-            <a class="dropdown-item" href="">Star wars</a>
+            <a class="dropdown-item" href="Trivia1.html">Regular show</a>
+            <a class="dropdown-item" href="second trivia1.html">Star wars</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="Description.html">Descripton</a>
           </div>
@@ -34,7 +34,6 @@
     </div>
   </nav>
   
-
   <!doctype html>
 <html lang="en">
 <head>
@@ -50,12 +49,12 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">how did Han Solo get the Falcon?</h1>
-<!-- add image/gif -->
+<h1 id ='trivia'align="center">WRONG ANSWER</h1>
+<!-- image -->
 <div class="x">
-<img src="https://ewscripps.brightspotcdn.com/dims4/default/a782f54/2147483647/strip/true/crop/640x360+0+60/resize/1280x720!/quality/90/?url=https%3A%2F%2Fmediaassets.wcpo.com%2Fphoto%2F2018%2F04%2F23%2FWCPO_falcon_1524528489522_84735425_ver1.0_640_480.jpg" 
-alt="">
+<img src="https://thumbs.gfycat.com/ChiefThirstyKoi-size_restricted.gif" alt="">
 </div>
+
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
@@ -65,10 +64,7 @@ alt="">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
 <div class="v">
-<a href="Triviawrong9.html"><button>Stole it</button></a>
-<a href="second trivia12.html"><button>Won it</button></a>
-<a href="Triviawrong9.html"><button>Bought it</button></a>
-<a href="Triviawrong9.html"><button>Borrowed it and never gave it back</button></a>
+<a href="second trivia1.html"><button>Go Back</button></a>
 </div>
 </body>
 </html>
