--- a/second trivia2.html
+++ b/second trivia2.html
@@ -64,10 +64,10 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
 <div class="v">
-<a href=""><button>22 BBY</button></a>
-<a href=""><button>21 BBY</button></a>
+<a href="second trivia1 wrong.html"><button>22 BBY</button></a>
+<a href="second trivia1 wrong.html"><button>21 BBY</button></a>
 
-<a href=""><button>20 BBY</button></a>
+<a href="second trivia1 wrong.html"><button>20 BBY</button></a>
 <a href="second trivia3.html"><button>19 BBY</button></a>
 </div>
 
