--- a/second trivia10.html
+++ b/second trivia10.html
@@ -65,10 +65,10 @@ alt="">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
 <div class="v">
-<a href="Triviawrong9.html"><button>Stole it</button></a>
-<a href="second trivia12.html"><button>Won it</button></a>
-<a href="Triviawrong9.html"><button>Bought it</button></a>
-<a href="Triviawrong9.html"><button>Borrowed it and never gave it back</button></a>
+<a href="second trivia1 wrong.html"><button>Stole it</button></a>
+<a href="second trivia11.html"><button>Won it</button></a>
+<a href="second trivia1 wrong.html"><button>Bought it</button></a>
+<a href="second trivia1 wrong.html"><button>Borrowed it and never gave it back</button></a>
 </div>
 </body>
 </html>
