--- a/second trivia11.html
+++ b/second trivia11.html
@@ -17,8 +17,8 @@
             Trivia
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="second trivia1.html">Regular show</a>
-            <a class="dropdown-item" href="">Star wars</a>
+            <a class="dropdown-item" href="Trivia1.html">Regular show</a>
+            <a class="dropdown-item" href="second trivia1.html">Star wars</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="Description.html">Descripton</a>
           </div>
@@ -34,7 +34,6 @@
     </div>
   </nav>
   
-
   <!doctype html>
 <html lang="en">
 <head>
@@ -50,11 +49,11 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">why did vader die from the emperors force lightning?</h1>
+<h1 id ='trivia'align="center">What planet did Maul die on?</h1>
 <!-- add image/gif -->
-<div class="x">
-<img src="https://marciokenobi.files.wordpress.com/2015/11/untitled-381.gif" 
-alt="">
+<div class="v">
+<img src="https://66.media.tumblr.com/c7cded0c7ec490e32796e972ca2cbf67/tumblr_on2ywx4jyo1smw5dno4_640.gif" /> 
+<!-- alt="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwjzuZDF2K3jAhXTMX0KHbhnDRkQjRx6BAgBEAU&url=https%3A%2F%2Fwww.cbr.com%2Freasons-darth-maul-biggest-badass-sith%2F&psig=AOvVaw0AmoHlzRsoklykUWPq_y_r&ust=1562962690475989"> -->
 </div>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -65,10 +64,10 @@ alt="">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
 <div class="v">
-<a href="second trivia1 wrong.html"><button>he was already weakened by luke when he damaged his suit</button></a>
-<a href="Second trivia12.html"><button>his suit had a weakness to force lightning designed by palpatine himself</button></a>
-<a href="second trivia1 wrong.html"><button>the force lightning cause his life support to stop working</button></a>
-<a href="second trivia1 wrong.html"><button>none of the above</button></a>
+<a href="second trivia1 wrong.html"><button>Coruscant</button></a>
+<a href="second trivia12.html"><button>Tatooine</button></a>
+<a href="second trivia1 wrong.html"><button>Naboo</button></a>
+<a href="second trivia1 wrong.html"><button>Endor</button></a>
 </div>
 </body>
 </html>
