--- a/second trivia7.html
+++ b/second trivia7.html
@@ -49,7 +49,7 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">Who ordered the creation of the clone army?</h1>
+<h1 id ='trivia'align="center">Who ordered the production of the clone army?</h1>
 <!-- add image/gif -->
 <div class="v">
 <img src="https://pa1.narvii.com/6623/3b815ec0492b6d3409e54289243dc14ba3dce302_hq.gif" 
