--- a/second trivia14.html
+++ b/second trivia14.html
@@ -17,8 +17,8 @@
             Trivia
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="Trivia1.html">Regular show</a>
-            <a class="dropdown-item" href="second trivia1.html">Star wars</a>
+            <a class="dropdown-item" href="second trivia1.html">Regular show</a>
+            <a class="dropdown-item" href="">Star wars</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="Description.html">Descripton</a>
           </div>
@@ -34,6 +34,7 @@
     </div>
   </nav>
   
+
   <!doctype html>
 <html lang="en">
 <head>
@@ -49,11 +50,11 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">Why did Darth Maul use a double bladed Lightsaber?</h1>
+<h1 id ='trivia'align="center">When did the battle of Yaven take place?</h1>
 <!-- add image/gif -->
-<div class="v">
-<img src="https://media.giphy.com/media/GFxXy4kf0wq64/giphy.gif" /> 
-<!-- alt="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwjzuZDF2K3jAhXTMX0KHbhnDRkQjRx6BAgBEAU&url=https%3A%2F%2Fwww.cbr.com%2Freasons-darth-maul-biggest-badass-sith%2F&psig=AOvVaw0AmoHlzRsoklykUWPq_y_r&ust=1562962690475989"> -->
+<div class="x">
+<img src="http://pa1.narvii.com/6394/feb5d71e256b2852e25a34eeeedb9fc31b962d86_00.gif"
+alt="">
 </div>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -64,11 +65,10 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
 <div class="v">
-<a href="second trivia1 wrong.html"><button>He thought it would be intimidating and scare the opponent to make mistakes during battle</button></a>
-<a href="second trivia11.html"><button>it gave him more choices during combat</button></a>
-<a href="second trivia1 wrong.html"><button>he thought it looked cool</button></a>
-<a href="second trivia1 wrong.html"><button>he was given it as a trophie/prize</button></a>
+<a href="second trivia15.html"><button>0 BBY</button></a>
+<a href="second trivia1 wrong.html"><button>1 BBY</button></a>
+<a href="second trivia1 wrong.html"><button>2 BBY</button></a>
+<a href="second trivia1 wrong.html"><button>3 BBY</button></a>
 </div>
 </body>
 </html>
-<head>
