--- a/second trivia4.html
+++ b/second trivia4.html
@@ -50,7 +50,7 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">How many people could the death satr house?</h1>
+<h1 id ='trivia'align="center">How many people could the death star house?</h1>
 <!-- add image/gif -->
 <div class="x">
 <img src="https://fsmedia.imgix.net/7e/8f/38/b3/5e13/4a4d/9f19/4e3c2e1b1aca/death-star-in-rogue-one.gif#image" 
