--- a/Solutions.html
+++ b/Solutions.html
@@ -54,53 +54,53 @@
 
         <div class ='gridTest'>
         
-        <div class="_h_tmls squares">H</div>
-        <div class="h_t_ml squares">T</div>
-        <div class="ht_m_ls squares">M</div>
-        <div class="htm_l_ squares">L</div>
-        <div class="m_a_in-jss squares">A</div>
-        <div class="ma_i_n-jss squares">I</div>
-        <div class="mai_n_-jsss squares">N</div>
-        <div class="main_-_jss squares">.</div>
-        <div class="main-_j_sss squares">J</div>
-        <div class="main-j_s_s squares">S</div>
-        <div class="main-js_s_ squares">S</div>
-        <div class="n_a_v squares">A</div>
-        <div class="na_v_ squares">V</div>
-        <div class="_c_ss squares">C</div>
-        <div class="cs_s_s squares">S</div>
-        <div class="s_t_yle squares">T</div>
-        <div class="st_y_le squares">Y</div>
-        <div class="sty_l_e squares">L</div>
-        <div class="styl_e_ squares">E</div>
-        <div class="j_a_vascript squares">A</div>
-        <div class="ja_v_ascript squares">V</div>
-        <div class="jav_a_script squares">A</div>
-        <div class="java_s_cript squares">S</div>
-        <div class="javas_c_ript squares">C</div>
-        <div class="javasc_r_ipt squares">R</div>
-        <div class="javascr_i_pts squares">I</div>
-        <div class="javascri_p_ts squares">P</div>
-        <div class="javascrip_t_ squares">T</div>
-        <div class="i_n_dex squares">N</div>
-        <div class="in_d_ex squares">D</div>
-        <div class="ind_e_x squares">E</div>
-        <div class="inde_x_ squares">X</div>
-        <div class="p_r_ogramming squares">R</div>
-        <div class="pr_o_gramming squares">O</div>
-        <div class="pro_g_ramming squares">G</div>
-        <div class="prog_r_amming squares">R</div>
-        <div class="progr_a_mming squares">A</div>
-        <div class="progra_m_ming squares">M</div>
-        <div class="program_m_ing squares">M</div>
-        <div class="programm_i_ng squares">I</div>
-        <div class="programmi_n_g squares">N</div>
-        <div class="programmin_g_ squares">G</div>
-        <div class="c_o_ding squares">O</div>
-        <div class="co_d_ing squares">D</div>
-        <div class="cod_i_ng squares">I</div>
-        <div class="codi_n_g squares">N</div>
-        <div class="codin_g_ squares">G</div>
+        <div class="_h_tmlS squares">H</div>
+        <div class="h_t_mlS squares">T</div>
+        <div class="ht_m_lS squares">M</div>
+        <div class="htm_l_S squares">L</div>
+        <div class="m_a_in-jssS squares">A</div>
+        <div class="ma_i_n-jssS squares">I</div>
+        <div class="mai_n_-jssS squares">N</div>
+        <div class="main_-_jssS squares">.</div>
+        <div class="main-_j_ssS squares">J</div>
+        <div class="main-j_s_sS squares">S</div>
+        <div class="main-js_s_S squares">S</div>
+        <div class="n_a_vS squares">A</div>
+        <div class="na_v_S squares">V</div>
+        <div class="_c_ssS squares">C</div>
+        <div class="cs_s_S squares">S</div>
+        <div class="s_t_yleS squares">T</div>
+        <div class="st_y_leS squares">Y</div>
+        <div class="sty_l_eS squares">L</div>
+        <div class="styl_e_S squares">E</div>
+        <div class="j_a_vascriptS squares">A</div>
+        <div class="ja_v_ascriptS squares">V</div>
+        <div class="jav_a_scriptS squares">A</div>
+        <div class="java_s_criptS squares">S</div>
+        <div class="javas_c_riptS squares">C</div>
+        <div class="javasc_r_iptS squares">R</div>
+        <div class="javascr_i_ptS squares">I</div>
+        <div class="javascri_p_tS squares">P</div>
+        <div class="javascrip_t_S squares">T</div>
+        <div class="i_n_dexS squares">N</div>
+        <div class="in_d_exS squares">D</div>
+        <div class="ind_e_xS squares">E</div>
+        <div class="inde_x_S squares">X</div>
+        <div class="p_r_ogrammingS squares">R</div>
+        <div class="pr_o_grammingS squares">O</div>
+        <div class="pro_g_rammingS squares">G</div>
+        <div class="prog_r_ammingS squares">R</div>
+        <div class="progr_a_mmingS squares">A</div>
+        <div class="progra_m_mingS squares">M</div>
+        <div class="program_m_ingS squares">M</div>
+        <div class="programm_i_ngS squares">I</div>
+        <div class="programmi_n_gS squares">N</div>
+        <div class="programmin_g_S squares">G</div>
+        <div class="c_o_dingS squares">O</div>
+        <div class="co_d_ingS squares">D</div>
+        <div class="cod_i_ngS squares">I</div>
+        <div class="codi_n_gS squares">N</div>
+        <div class="codin_g_S squares">G</div>
         </div>
 
     <!-- Optional JavaScript -->
