--- a/second trivia10.html
+++ b/second trivia10.html
@@ -49,11 +49,11 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">Why did Darth Maul use a double bladed Lightsaber?</h1>
+<h1 id ='trivia'align="center">How do sith get there Red Blades?</h1>
 <!-- add image/gif -->
 <div class="v">
-<img src="https://media.giphy.com/media/GFxXy4kf0wq64/giphy.gif" /> 
-<!-- alt="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwjzuZDF2K3jAhXTMX0KHbhnDRkQjRx6BAgBEAU&url=https%3A%2F%2Fwww.cbr.com%2Freasons-darth-maul-biggest-badass-sith%2F&psig=AOvVaw0AmoHlzRsoklykUWPq_y_r&ust=1562962690475989"> -->
+<img src="https://i.makeagif.com/media/5-16-2017/rtQbpf.gif" 
+alt="">
 </div>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -63,11 +63,11 @@
 </script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
-<div class="v">
-<a href="second trivia1 wrong.html"><button>He thought it would be intimidating and scare the opponent to make mistakes during battle</button></a>
-<a href="second trivia11.html"><button>it gave him more choices during combat</button></a>
-<a href="second trivia1 wrong.html"><button>he thought it looked cool</button></a>
-<a href="second trivia1 wrong.html"><button>he was given it as a trophie/prize</button></a>
+<div class="x">
+<a href="second trivia1 wrong.html"><button>They dye it red</button></a>
+<a href="second trivia1 wrong.html"><button>its naturally red just a rare color</button></a>
+<a href="second trivia6.html"><button>pour in their hate and anger to make the krystal to bleed red</button></a>
+<a href="second trivia1 wrong.html"><button>they do a ritual</button></a>
 </div>
 </body>
 </html>
