--- a/second trivia13.html
+++ b/second trivia13.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark"></head>
     <a class="navbar-brand" href="index.html">Home</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -50,10 +50,10 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">how did Han Solo get the Falcon?</h1>
+<h1 id ='trivia'align="center">why did vader die from the emperors force lightning?</h1>
 <!-- add image/gif -->
 <div class="x">
-<img src="https://ewscripps.brightspotcdn.com/dims4/default/a782f54/2147483647/strip/true/crop/640x360+0+60/resize/1280x720!/quality/90/?url=https%3A%2F%2Fmediaassets.wcpo.com%2Fphoto%2F2018%2F04%2F23%2FWCPO_falcon_1524528489522_84735425_ver1.0_640_480.jpg" 
+<img src="https://marciokenobi.files.wordpress.com/2015/11/untitled-381.gif" 
 alt="">
 </div>
 <!-- Optional JavaScript -->
@@ -65,10 +65,10 @@ alt="">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
 <div class="v">
-<a href="second trivia1 wrong.html"><button>Stole it</button></a>
-<a href="second trivia14.html"><button>Won it</button></a>
-<a href="second trivia1 wrong.html"><button>Bought it</button></a>
-<a href="second trivia1 wrong.html"><button>Borrowed it and never gave it back</button></a>
+<a href="second trivia1 wrong.html"><button>he was already weakened by luke when he damaged his suit</button></a>
+<a href="Second trivia13.html"><button>his suit had a weakness to force lightning designed by palpatine himself</button></a>
+<a href="second trivia1 wrong.html"><button>the force lightning cause his life support to stop working</button></a>
+<a href="second trivia1 wrong.html"><button>none of the above</button></a>
 </div>
 </body>
 </html>
