--- a/index.html
+++ b/index.html
@@ -46,8 +46,15 @@
     <link rel="stylesheet" href="style.css">
     <title>[Website name]</title>
   </head>
-  <body>
-
+  <body> 
+    <!-- THE BACKGROUND -->
+    <style>
+      body {
+background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTljGC6x7iOaz7z6KyCwXcMQaaY97HKHgypLZusGuRGXpoHPzPSyw);
+background-repeat: no-repeat;
+background-size: cover;
+}
+</style>
 <script src= "svg.js"></script>
 <script src='main.js'></script>
 <div style="text-align: center">
