--- a/squares.html
+++ b/squares.html
@@ -81,7 +81,7 @@
         <!--This is part of words "css" and "Main.jss"-->
         <div class="main-js_s_ square" onmouseover="changeText('Css and Main.jss Hint')" onmouseout="defaultText()"></div>
         <!--Word= "Nav"-->
-        <div class="n_a_v square" onmouseover="changeText('Nav Hint')" onmouseout="defaultText()"></div>
+        <div class="n_a_v squareL" onmouseover="changeText('Nav Hint')" onmouseout="defaultText()"></div>
         <div class="na_v_ square" onmouseover="changeText('Nav Hint')" onmouseout="defaultText()"></div>
         <!--This is the start of both words 'css' and 'coding'-->
         <div class="_c_ss square" onmouseover="changeText('Css and coding Hint')" onmouseout="defaultText()"></div>
@@ -93,7 +93,7 @@
         <div class="sty_l_e square" onmouseover="changeText('Style Hint')" onmouseout="defaultText()"></div>
         <div class="styl_e_ square" onmouseover="changeText('Style Hint')" onmouseout="defaultText()"></div>
         <!--Word= 'Javascript'-->
-        <div class="j_a_vascript square" onmouseover="changeText('Javascript Hint')" onmouseout="defaultText()"></div>
+        <div class="j_a_vascript squareL" onmouseover="changeText('Javascript Hint')" onmouseout="defaultText()"></div>
         <div class="ja_v_ascript square" onmouseover="changeText('Javascript Hint')" onmouseout="defaultText()"></div>
         <div class="jav_a_script square" onmouseover="changeText('Javascript Hint')" onmouseout="defaultText()"></div>
         <div class="java_s_cript square" onmouseover="changeText('Javascript Hint')" onmouseout="defaultText()"></div>
