--- a/Trivia1.html
+++ b/Trivia1.html
@@ -47,11 +47,19 @@
     <link rel="stylesheet" href="style.css">
     <title>[Website name]</title>
   </head>
+
   <body>
       <script src= "svg.js"></script>
     <script src='main.js'></script>
     <h1 id ='trivia'align="center">Trivia</h1>
-    
+    <!-- BACKGROUND -->
+    <style>
+      body {
+background-image: url(https://elements-video-cover-images-0.imgix.net/files/235598819/385.1mb+pre+image+toon+ray+background.jpg?auto=compress%2Cformat&fit=min&h=563&w=1000&s=99dc40423896457952556c111e67e3da);
+background-repeat: no-repeat;
+background-size: cover;
+}
+</style>);
 <!-- add image/gif -->
 <div class="v">
     <img src="https://i.cartoonnetwork.com/prismo/props/reg_tv-pg-v.png" 
