--- a/second trivia18.html
+++ b/second trivia18.html
@@ -66,7 +66,7 @@ alt="">
 </script>
 <div class="v">
 <a href="second trivia1 wrong.html"><button>The saber drains the force from the user to power the saber</button></a>
-<a href="second trivia19.html">Kyber Krystals</button></a>
+<a href="second trivia19.html"><button>Kyber Krystals</button></a>
 <a href="second trivia1 wrong.html"><button>They charge it by meditating with it </button></a>
 <a href="second trivia1 wrong.html"><button>Fuel</button></a>
 </div>
