--- a/second trivia20.html
+++ b/second trivia20.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark"></head>
     <a class="navbar-brand" href="index.html">Home</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -17,8 +17,8 @@
             Trivia
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="second trivia1.html">Regular show</a>
-            <a class="dropdown-item" href="">Star wars</a>
+            <a class="dropdown-item" href="Trivia1.html">Regular show</a>
+            <a class="dropdown-item" href="second trivia1.html">Star wars</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="Description.html">Descripton</a>
           </div>
@@ -50,10 +50,10 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">How much does a Lightsaber usaully cost in the black market?</h1>
+<h1 id ='trivia'align="center">YOU MADE IT TO THE END!</h1>
 <!-- add image/gif -->
-<div class="x">
-<img src="https://cdn.shopify.com/s/files/1/1440/9434/products/redeemer-v2_8a3db6a7-8fe1-4f09-90e3-a9f4c8057f14_300x300.jpg?v=1558480091" 
+<div class="v">
+<img src="https://i.ytimg.com/vi/iH6a1iYQ0GA/maxresdefault.jpg" 
 alt="">
 </div>
 <!-- Optional JavaScript -->
@@ -64,11 +64,7 @@ alt="">
 </script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
-<div class="v">
-<a href="second trivia1 wrong.html"><button>10.000 credits</button></a>
-<a href="second trivia20.html"><button>20,000 credits</button></a>
-<a href="second trivia1 wrong.html"><button>30.000</button></a>
-<a href="second trivia1 wrong.html"><button>40,000</button></a>
-</div>
+
 </body>
 </html>
+<head>
