--- a/second trivia1.html
+++ b/second trivia1.html
@@ -50,7 +50,7 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">Trivia</h1>
+<h1 id ='trivia'align="center">Star Wars Trivia</h1>
 
 <!-- add image/gif -->
 <div class="v">
