--- a/second trivia19.html
+++ b/second trivia19.html
@@ -67,8 +67,8 @@ alt="">
 <div class="v">
 <a href="second trivia1 wrong.html"><button>10.000 credits</button></a>
 <a href="second trivia20.html"><button>20,000 credits</button></a>
-<a href="second trivia1 wrong.html"><button>30.000</button></a>
-<a href="second trivia1 wrong.html"><button>40,000</button></a>
+<a href="second trivia1 wrong.html"><button>30.000 credits</button></a>
+<a href="second trivia1 wrong.html"><button>40,000 credits</button></a>
 </div>
 </body>
 </html>
