--- a/second trivia6.html
+++ b/second trivia6.html
@@ -50,7 +50,7 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">How many forms of lightsaber fighting was there?</h1>
+<h1 id ='trivia'align="center">How many forms of lightsaber fighting styles where there?</h1>
 <!-- add image/gif -->
 <div class="v">
 <img src="https://thumbs.gfycat.com/OddballFlakyFieldmouse-size_restricted.gif" 
